# 3D-Reconstruction

./: .gitignore
Gazebo_Scenes/: machine_robot_scene  overview  overview_demo.world  overview_demo_flatten.world  overview_outdoor.world  overview_outdoor_scene.world  overview_outdoor_smallCar.world  sample  walls.blend111  walls.blend1111  walls.blend11111
Gazebo_Scenes/models/floor/: model.config  model.sdf
Gazebo_Scenes/models/floor_demo/: floor_demo.dae  model.config  model.sdf
Gazebo_Scenes/models/floor_demo_flatten/: floor_demo_flatten.dae  model.config  model.sdf
Gazebo_Scenes/models/floor_pcn2/: model.config  model.sdf
GitHub/: demo_run.sh
GitHub/My_log/: python_execution_times.json  python_memory_usage.json
GitHub/config/: r3liveGPU_env.yml  system_config.conf  trivial_uv.mlx
GitHub/pcl_mesh_reconstruction/: CMakeLists.txt  flatten.py  mesh_reconstruction_greedy.cpp  mesh_reconstruction_greedyColor.cpp  mesh_reconstruction_poisson.cpp  mesh_reconstruction_poissonColor.cpp  mesh_reconstruction_poissonTexture.cpp
GitHub/scripts/: mesh_reconstruction.sh  paint3d.sh  r3live_system_launcher.sh
PoinTr/: fix_pointcloud.py  generate_partial_views copy.py  generate_partial_views.py  requirements.txt
PoinTr/data/: shapenet_synset_dict.json
PoinTr/scripts/: dist_train.sh
PoinTr/tools/: inference.py  inference_pcd.py
pointnet.pytorch/: asc2annotation_augmentation_json.py
pointnet.pytorch/utils/: segment_pcd.py
r3liveGPU_output/: asc_to_pcd.py  flattened_mesh.ply  mesh_result.ply  pose.txt  refined2_20250523_020730_158913.ply  test.ply
(+128 files in other folders)
